--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUb
 integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="container-fluid">
 
   <!-- Add your site or application content here -->
-  <p class="d-none">Hello world! This is HTML5 Boilerplate.</p>
+  <p class="border-bottom border-3">Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
