--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUb
 integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </head>
 
-<body class="container-fluid">
+<body class="container-fluid text-center">
 
   <!-- Add your site or application content here -->
   <p class="border-bottom border-3">Hello world! This is HTML5 Boilerplate.</p>
